feat: change publish and topics
